attempted to get pastrBasic to work